# Mw05Recomp

./: .gitignore  .gitmodules  AGENTS.md  Auto_Function_Parser.py  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTEXT_ADDRESS_INVESTIGATION.md  CONTEXT_CODE_SNIPPETS.md  CONTEXT_FOR_NEW_AGENT.md  CONTEXT_INVESTIGATION_COMPLETE.md  CRITICAL_BUG_VdInitializeEngines.md  CRITICAL_FINDINGS_VdInit.md  CURRENT_STATUS.md  DEBUG_FINDINGS.md  DIAGNOSTIC_SUMMARY.md  ENTRY_POINT_FIX_SUCCESS.md  HANDOFF_TO_NEXT_AGENT.md  HEAP_VS_STATIC_CONTEXT_ANALYSIS.md  IMPORT_TABLE_SUCCESS.md  INVESTIGATION_SUMMARY.md  LOGGING.md  Last_AI_Response.txt  PROGRESS_REPORT.md  PROGRESS_SUMMARY.md  QWORD_828F1F98_CORRUPTION_FIX.md  README.md  RECOMPILER_BUG_INVESTIGATION.md  RECOMPILER_FIX_SUMMARY.md  RENDER_THREAD_ROOT_CAUSE.md  RESEARCH_FINDINGS.md  RUNNING.md  STATUS_UPDATE.md  THREAD2_ROOT_CAUSE_ANALYSIS.md  XENIA_DEBUG_INSTRUCTIONS.md  analyze_context_init.py  analyze_crash.py  analyze_indirect_misses.py  analyze_thread2_xenia.py  build.bat  (+55 more)
.github/ISSUE_TEMPLATE/: bug_report.yml
IDA_dumps/: README.md
MW05RecompLib/: CMakeLists.txt
MW05RecompLib/config/: SWA.toml
MW05RecompLib/private/: default.xex
Mw05Recomp/: CMakeLists.txt  app.cpp  exports.cpp  main.cpp  misc_impl.cpp  ppc_hook_overrides_manual.cpp  ppc_indirect_hardfix.cpp  ppc_manual_overrides_symbols.cpp  ppc_runtime_patch_hooks.cpp  preload_executable.cpp  preload_executable.h  sdl_events.h  stdafx.h
Mw05Recomp/apu/: audio.cpp  embedded_player.cpp
Mw05Recomp/apu/driver/: sdl_driver.cpp
Mw05Recomp/cpu/: alloc_stub.cpp  guest_stack_var.h  guest_thread.cpp  guest_thread.h  loader_test.cpp  mw05_boot_shims.cpp  mw05_force_loader_start.cpp  mw05_function_hooks.cpp  mw05_heap_shims.cpp  mw05_init_trace.cpp  mw05_init_unblock.cpp  mw05_loader_shims.cpp  mw05_main_thread_trace.cpp  mw05_scheduler_shims.cpp  mw05_streaming_bridge.cpp  mw05_trace_threads.cpp  mw05_worker_pool_init.cpp  ppc_list_shims.cpp
Mw05Recomp/gpu/: mw05_draw_diagnostic.cpp  mw05_micro_interpreter.cpp  mw05_micro_interpreter.h  mw05_trace_shims.cpp  pm4_parser.cpp  pm4_parser.h  video.cpp  video.h
Mw05Recomp/gpu/imgui/: imgui_font_builder.h  imgui_snapshot.cpp  imgui_snapshot.h
Mw05Recomp/hid/driver/: sdl_hid.cpp
Mw05Recomp/install/: update_checker.cpp
Mw05Recomp/install/hashes/: game.cpp
Mw05Recomp/kernel/: apc.h  base_heap.cpp  base_heap.h  debug_verbosity.h  event.h  function.h  handles.h  heap.cpp  heap.h  import_lookup.cpp  imports.cpp  init_manager.h  memory.cpp  memory.h  ppc_func_mappings_stub.cpp  system_threads.cpp  time.h  trace.cpp  trace.h  vm_arena.cpp  vm_arena.h  xam.cpp  xdm.cpp  xdm.h
Mw05Recomp/kernel/io/: file_system.cpp  file_system.h
Mw05Recomp/locale/: config_locale.cpp  locale.cpp
Mw05Recomp/mod/: mod_loader.cpp
Mw05Recomp/os/macos/: logger_macos.cpp
Mw05Recomp/os/win32/: logger_win32.cpp  registry_win32.inl
Mw05Recomp/patches/: audio_patches.cpp  input_patches.cpp  inspire_patches.cpp
Mw05Recomp/ppc/: ppc_trace_glue.h
Mw05Recomp/res/win32/: res.rc.template
Mw05Recomp/tools/: gen_import_stubs.cmake  run_python_script.cmake  run_python_script_extract.cmake  run_python_script_hardfix.cmake  run_python_script_hooks.cmake  run_python_script_indirect.cmake  run_python_script_redirects.cmake
Mw05Recomp/ui/: achievement_menu_stub.cpp  achievement_overlay.cpp  debug_console.cpp  debug_console.h  debug_console_listener.cpp  game_window.cpp  imgui_utils.cpp  imgui_utils.h  installer_wizard.cpp  installer_wizard.h  message_window_stub.cpp  options_menu.h  options_menu_stub.cpp  tv_static.cpp
Mw05Recomp/user/: config.cpp  config.h  paths.h  persistent_storage_manager.cpp
Mw05RecompLib/: CMakeLists.txt
Mw05RecompLib/cmake/: gen_ppc_list.cmake
Mw05RecompLib/config/: MW05.toml  MW05_full.toml  MW05_minimal.toml  research_subs.txt  xam_imports.txt  xboxkrnl_imports.txt
docs/research/: 2025-10-22_callback_initialization_investigation.md  2025-10-22_heap_corruption_fix_store16.md  2025-10-27_current_status.md  (+91 more)
scripts/: analyze_after_notification.py  analyze_blocking.ps1  analyze_callback.py  analyze_crash_pattern.py  analyze_crashed_thread.ps1  analyze_draws_zero.py  analyze_host_calls.py  analyze_init_sequence.py  analyze_ppc_calls.py  analyze_static_constructors.py  analyze_trace.ps1  analyze_vblank_timing.py  analyze_worker_threads.py  analyze_xex_range.py  auto_dismiss_messagebox.ps1  auto_handle_messageboxes.py  calculate_function_table_size.py  capture_missing_imports.ps1  check_first_listener.py  check_function.ps1  check_if_game_running.py  check_listeners.py  check_null_call.ps1  check_polling.py  check_timing.py  check_xam_calls_after_notification.py  cleanup_research.ps1  click_ignore.ps1  debug.cmd  debug_blocking.ps1  debug_crash.cmd  debug_with_cdb.ps1  decompile_function.py  detect_messagebox.ps1  fetch_decompile.py  fetch_function_sizes.ps1  fetch_ida_decompile.py  find_blocking_point.py  find_crash_function.ps1  find_input.py  (+76 more)
toolchains/: windows-clang.cmake
tools/: Analyze_Function_List.py  CMakeLists.txt  Create_Minimal_TOML.py  Extract_Minimal_Functions.py  analyze_825968B0.py  analyze_context_allocation.py  analyze_context_structure.py  analyze_crash.py  analyze_imports.py  analyze_init_block.py  analyze_kernel_calls.py  analyze_loop_address.py  analyze_main_loop.py  analyze_main_loop_structure.py  analyze_main_thread.py  analyze_missing_imports.py  analyze_mw05_init.py  analyze_no_draws.py  analyze_no_render.py  analyze_notify_loop.py  analyze_pm4_commands.py  analyze_queue_state.py  analyze_sleep_pattern.py  analyze_static_init_table.py  analyze_stderr.py  analyze_thread_activity.py  analyze_thread_creation.py  analyze_thread_init.py  analyze_trace.py  analyze_trace_functions.py  analyze_xenia_after_vdswap.ps1  analyze_xenia_log.py  analyze_xenia_thread_creation.py  calc_crash_addr.py  check_audio_register.ps1  check_caller_loop.py  check_funcs.ps1  check_ida_8284F590.py  check_notify_behavior.py  check_notify_exit.py  (+84 more)
tools/IDA/: ida_api_server.py
tools/x_decompress/: CMakeLists.txt
(+18 files in other folders)
